fix(css): add webkit property for backface-visibility to support Safari

--- a/docs/_static/css/main.css
+++ b/docs/_static/css/main.css
@@ -75,6 +75,7 @@
 
 .card-flip > div {
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     transition: transform 400ms;
     transition-timing-function: linear;
 }
